src/Base/main/default/objects/InventoryImport__c/InventoryImport__c.object-meta.xml
<CustomObject>
    <label>InventoryImport</label>
    <nameField>
        <label>InventoryImport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InventoryImports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>