src/Base/main/default/objects/InventoryImport__c/fields/InventoryBalance__c.field-meta.xml
<CustomField>
    <fullName>InventoryBalance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InventoryBalance</label>
    <referenceTo>AcctSeedERP__Inventory_Balance__c</referenceTo>
    <relationshipLabel>InventoryImports</relationshipLabel>
    <relationshipName>InventoryImports</relationshipName>
    <type>Lookup</type>
</CustomField>