src/Base/main/default/objects/InventoryImport__c/fields/processed__c.field-meta.xml
<CustomField>
    <fullName>processed__c</fullName>
    <label>processed</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>