src/Base/main/default/objects/InventoryImport__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductId</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>InventoryImports</relationshipLabel>
    <relationshipName>InventoryImports</relationshipName>
    <type>Lookup</type>
</CustomField>